# cis194

./: .codeclimate.yml  .travis.yml  README.md  cis194.cabal
Ch4/: cis194-ch4.cabal
Ch4/app/: Main.hs
Ch4/src/: Lib.hs
Ch4/test/: Spec.hs
Ch5/: Ch5.cabal
Ch5/app/: Main.hs
Ch5/src/: Calc.hs  Lib.hs
Ch5/test/: Spec.hs
Ch6/: Ch6.cabal
Ch6/src/: Lib.hs
Ch6/test/: Spec.hs
cis194-01-intro-hw.hsproj/: .uuid  Cis194_01_intro_hw.hs  _Cis194_01_intro_hw.hsplay  cis19401introhw.cabal
cis194-02-ADTs.hsproj/: .uuid  Cis194_02_ADTs.hs  Log.hs  LogAnalysis.hs  _Cis194_02_ADTs.hsplay  _LogAnalysis.hsplay  cis19402ADTs.cabal
cis194-02-ADTs.hsproj/Ch2/: LogAnalysis.hs  _LogAnalysis.hsplay
cis194-02-ADTs.hsproj/Ch3/: Ch3.hs  Hopscotch.hs  LocalMaxima.hs  _Ch3.hsplay
src/ch1/: Ch1.hs
src/ch10/: AParser.hs  Ch10.hs
src/ch11/: Ch11.hs  SExpr.hs
src/ch12/: Ch12.hs  Risk.hs
src/ch2/: Ch2.hs  Log.hs
src/ch3/: Ch3.hs  Hopscotch.hs
src/ch4/: Ch4.hs
src/ch5/: Ch5.hs
src/ch6/: Ch6.hs
src/ch7/: Ch7.hs  Editor.hs  JoinList.hs  JoinListBufEditor.hs
src/ch8/: Ch8.hs  Employee.hs  companyFun.hs
src/ch9/: AParser.hs  Ch9.hs
test/: Ch10Spec.hs  Ch11Spec.hs  Ch12Spec.hs  Ch2Spec.hs  Ch3Spec.hs  Ch4Spec.hs  Ch5Spec.hs  Ch6Spec.hs  Ch7Spec.hs  Ch8Spec.hs  Ch9Spec.hs
