name:                cis194
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Ch6#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src/ch1
                     , src/ch2
                     , src/ch3
                     , src/ch4
                     , src/ch5
                     , src/ch6
                     , src/ch7
                     , src/ch8
                     , src/ch10
  exposed-modules:     Ch1
                     , Ch2
                     , Ch3
                     , Ch4
                     , Ch5
                     , Calc
                     , ExprT
                     , Parser
                     , Ch6
                     , Ch7
                     , JoinList
                     , Sized
                     , Buffer
                     , Ch8
                     , Employee
                     , Ch10
                     , AParser
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , mtl
  default-language:    Haskell2010


executable ch7-editor
    main-is:            StringBufEditor.hs
    hs-source-dirs:     src/ch7
    build-depends:      base
                      , mtl
    default-language:   Haskell2010
    other-modules:      Editor
                      , Buffer
                      , StringBuffer

executable ch7-jl-editor
    main-is:            JoinListBufEditor.hs
    hs-source-dirs:     src/ch7
    build-depends:      base
                      , mtl
    default-language:   Haskell2010
    other-modules:      Editor
                      , Buffer
                      , JoinList
                      , Sized

executable ch8-company-fun
    main-is:            companyFun.hs
    hs-source-dirs:     src/ch8
    build-depends:      base
                      , containers
    default-language:   Haskell2010

test-suite Ch4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Ch4Spec.hs
  build-depends:       base
                     , HUnit
                     , QuickCheck
                     , hspec
                     , cis194
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Ch5-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Ch5Spec.hs
  build-depends:       base
                     , HUnit
                     , QuickCheck
                     , hspec
                     , cis194
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Ch6-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Ch6Spec.hs
  build-depends:       base
                     , QuickCheck
                     , hspec
                     , cis194
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Ch7-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Ch7Spec.hs
  build-depends:       base
                     , QuickCheck
                     , hspec
                     , cis194
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Ch8-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Ch8Spec.hs
  build-depends:       base
                     , QuickCheck
                     , hspec
                     , cis194
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Ch10-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Ch10Spec.hs
  build-depends:       base
                     , QuickCheck
                     , hspec
                     , cis194
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wangwangwar/cis194
